--- a/index.html
+++ b/index.html
@@ -3,11 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BEM VINDO A CENTRAL DC!</title>
 </head>
 <body>
-    <h1>Bem vindo</h1>
-    <p>oi</p>
-    <p>teste de commit</p>
+    <form action= "centraldc.html" method="get">
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Central DC</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: url('c:\Users\sales\OneDrive\Área de Trabalho\trabalho.html\OIP.webp') no-repeat center center fixed;
+            background-size: cover;
+        }
+        .container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(173, 216, 230, 0.95);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        }
+        input[type="text"] {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #d9534f;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        h2 {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h2>Bem-vindo à Central DC</h2>
+        <p>Digite seu nome para entrar nesse universo da DC COMICS</p>
+        <input type="text" placeholder="Seu nome">
+        <br>
+        <button>Entrar</button>
+    </div>
 </body>
+</form>
 </html> 
