--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="titulo">Olá, nome</h1>
+    <script src="../javascript/principal.js"></script>
 </body>
 </html>
