--- a/paginas html/index.html
+++ b/paginas html/index.html
@@ -11,7 +11,7 @@
         <h2>Bem-vindo à Central DC</h2>
         <p>Digite seu nome para entrar nesse universo da DC COMICS&reg;</p>
         <form action= "centraldc.html" method="get" onsubmit="armazenar()">
-            <input type="text" placeholder="Seu nome" id="name">
+            <input required type="text" placeholder="Seu nome" id="name">
             <br>
             <button type="submit">Entrar</button>
         </form>
