--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="../estilos/princ.css">
 </head>
 <body>
+    <div id="menu">
     <h1 id="titulo">Olá, nome</h1>
+    </div>
+    <main>
+    <section id="gotham">
+        <button id="btngotham">Gotham</button>
+        <div id="corpogotham" class="oculto">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quidem ad ut molestiae ab porro aliquid odio odit ex, explicabo eius error iste repellendus cumque recusandae at nesciunt. Sunt, hic.</p>
+
+        </div>
+    </section>
+    <section id="metropolis">
+        <button id="btnmetropolis">metropolis</button>
+        <div id="corpometropolis" class="oculto">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quidem ad ut molestiae ab porro aliquid odio odit ex, explicabo eius error iste repellendus cumque recusandae at nesciunt. Sunt, hic.</p>
+            
+        </div>
+    </section>
+    </main>
     <script src="../javascript/principal.js"></script>
+    
 </body>
 </html>
