--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -25,6 +25,21 @@
             
         </div>
     </section>
+     <section id="Central City">
+        <button id="btncentralcity">Central city</button>
+        <div id="corpocentralcity" class="oculto">
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus unde maiores cumque numquam sapiente labore fugiat perferendis totam dicta ex tempore dolorem provident, aspernatur quasi expedita pariatur. Magnam, necessitatibus expedita.</p>
+
+        </div>
+    </section>
+    <br>
+    <section id="Coast city">
+        <button id="btncoastcity">Coast city</button>
+        <div id="corpocoastcity" class="oculto">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugit aliquam nulla beatae esse unde, vitae rem corrupti accusantium? Ipsam, ducimus. Iusto sapiente maiores minima incidunt quas beatae alias voluptas.</p>
+
+        </div>
+    </section>
     </main>
     <script src="../javascript/principal.js"></script>
     
