--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -25,10 +25,11 @@
             
         </div>
     </section>
-     <section id="Central City">
+     <section id="centralcity">
         <button id="btncentralcity">Central city</button>
         <div id="corpocentralcity" class="oculto">
-           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus unde maiores cumque numquam sapiente labore fugiat perferendis totam dicta ex tempore dolorem provident, aspernatur quasi expedita pariatur. Magnam, necessitatibus expedita.</p>
+           <button class="card"><p>Flash&reg;</p></button>
+           <button class="card"><p>Flash Reverso&reg;</p></button>
 
         </div>
     </section>
