--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Central Dc</title>
     <link rel="stylesheet" href="../estilos/princ.css">
 </head>
 <body>
-    <div id="menu">
+    <header id="menu">
     <h1 id="titulo">Olá, nome</h1>
-    </div>
+    </header>
     <main>
     <section id="gotham">
         <button id="btngotham">Gotham</button>
