--- a/paginas html/sobrenos.html
+++ b/paginas html/sobrenos.html
@@ -46,8 +46,8 @@
                 <button>oi</button>
             </div>
             <div class="texto">
-                <p><Strong>Heroi Favorito: </Strong> Super-Choque</p>
-                <p><Strong>Vilão Favorito: </Strong> Lobo</p>
+                <p><Strong>Heroi Favorito: </Strong>Batman</p>
+                <p><Strong>Vilão Favorito: </Strong> Red-Death</p>
                 <p><Strong>Anti-Heroi Favorito: </Strong>Capuz Vermelho</p>
                 <p><Strong>O que achou do projeto: </Strong><Em> "O git é uma desgraça"</Em></p>
             </div>
