--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -25,32 +25,32 @@
                 <button class="pers" id="superman"></button>
                 <button class="pers" id="flash"></button>
                 <button class="pers" id="maravilha"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
+                <button class="pers" id="lanterna"></button>
+                <button class="pers" id="aquaman"></button>
+                <button class="pers" id="arqueiro"></button>
+                <button class="pers" id="ciborg"></button>
             </div>
             <h2>Viloes</h2>
             <div>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
+                <button class="pers" id="dark"></button>
+                <button class="pers" id="ares"></button>
+                <button class="pers" id="coringa"></button>
+                <button class="pers" id="flash-reverso"></button>
+                <button class="pers" id="red-death"></button>
+                <button class="pers" id="lex"></button>
+                <button class="pers" id="sinestro"></button>
+                <button class="pers" id="exterminador"></button>
             </div>
             <h2>Anti-Herois</h2>
             <div>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
-                <button class="pers"></button>
+                <button class="pers" id="capuz"></button>
+                <button class="pers" id="etrigan"></button>
+                <button class="pers" id="lobo"></button>
+                <button class="pers" id="constatine"></button>
+                <button class="pers" id="gaviao"></button>
+                <button class="pers" id="roschach"></button>
+                <button class="pers" id="mulher-gato"></button>
+                <button class="pers" id="vingador-fantasma"></button>
             </div>
         </section>
     </main>
