--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -46,12 +46,22 @@
                 <button class="pers" id="capuz"></button>
                 <button class="pers" id="etrigan"></button>
                 <button class="pers" id="lobo"></button>
-                <button class="pers" id="constatine"></button>
+                <button class="pers" id="constantine"></button>
                 <button class="pers" id="gaviao"></button>
                 <button class="pers" id="roschach"></button>
                 <button class="pers" id="mulher-gato"></button>
                 <button class="pers" id="vingador-fantasma"></button>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+        </section>
+        <section class="informacoes">
+            <nav>
+                <a href="../paginas html/sobrenos.html">Um pouco sobre nos</a>
+                <a href="../paginas html/Nabra.html">Nao abra</a>
+            </nav>
         </section>
     </main>
         
