--- a/paginas html/generic.html
+++ b/paginas html/generic.html
@@ -22,7 +22,7 @@
 
         <section>
             <img src="" alt="" id="img">
-            <div>
+            <div class="texto">
                 <p id="descrição">Lorem ipsum doyguygyugyutcygtfytfvgfyvtyfttt</p>
             </div>
         </section>
