--- a/paginas html/centraldc.html
+++ b/paginas html/centraldc.html
@@ -19,8 +19,13 @@
         </div>
         <section>
             <br>
-            <h2>Herois</h2>
-            <div>
+            <div id="Herois">
+                <h2>Herois</h2>
+                <div class="btn">
+                    <img src="../midia/imagens/chevron_forward_60dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.png" alt="" id="btnheroi" class="but">
+                </div>
+            </div>
+            <div id="hero">
                 <button class="pers" id="batman"></button>
                 <button class="pers" id="superman"></button>
                 <button class="pers" id="flash"></button>
@@ -30,8 +35,13 @@
                 <button class="pers" id="arqueiro"></button>
                 <button class="pers" id="ciborg"></button>
             </div>
-            <h2>Viloes</h2>
-            <div>
+            <div id="Viloes">
+                <h2>Viloes</h2>
+                <div class="btn">
+                    <img src="../midia/imagens/chevron_forward_60dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.png" alt="" id="btnvilao" class="but">
+                </div>
+            </div>
+            <div id="villan">
                 <button class="pers" id="dark"></button>
                 <button class="pers" id="ares"></button>
                 <button class="pers" id="coringa"></button>
@@ -41,16 +51,21 @@
                 <button class="pers" id="sinestro"></button>
                 <button class="pers" id="exterminador"></button>
             </div>
-            <h2>Anti-Herois</h2>
-            <div>
+            <div id="Anti-Herois">
+                <h2>Anti-Herois</h2>
+                <div class="btn">
+                    <img src="../midia/imagens/chevron_forward_60dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.png" alt="" id="btnanti" class="but">
+                </div>
+            </div>
+            <div id="antheros">
                 <button class="pers" id="capuz"></button>
                 <button class="pers" id="etrigan"></button>
                 <button class="pers" id="lobo"></button>
                 <button class="pers" id="constantine"></button>
                 <button class="pers" id="gaviao"></button>
-                <button class="pers" id="roschach"></button>
-                <button class="pers" id="mulher-gato"></button>
                 <button class="pers" id="vingador-fantasma"></button>
+                <button class="pers" id="mulher-gato"></button>
+                <button class="pers" id="roschach"></button>
             </div>
             <br>
             <br>
