--- a/paginas html/sobrenos.html
+++ b/paginas html/sobrenos.html
@@ -20,7 +20,7 @@
         </header>
         <section id="Mariana">
             <div class="imagem">
-                <button>oi</button>
+                <button id="btnMary">oi</button>
             </div>
             <div class="texto">
                 <p><Strong>Heroi Favorito:</Strong>Batman</p>
@@ -35,15 +35,15 @@
                 <button>oi</button>
             </div>
             <div class="texto">
-                <p><Strong>Heroi Favorito:</Strong>Batman</p>
-                <p><Strong>Vilão Favorito:</Strong>Coringa</p>
-                <p><Strong>Anti-Heroi Favorito:</Strong>Espectro</p>
+                <p><Strong>Heroi Favorito:</Strong>Super-Girl</p>
+                <p><Strong>Vilão Favorito:</Strong>Hera venenosa</p>
+                <p><Strong>Anti-Heroi Favorito:</Strong>Arlequina</p>
                 <p><Strong>O que achou do projeto:</Strong><Em>"Massa Demais Doido"</Em></p>
             </div>
         </Section>
         <section id="Matheus">
             <div class="imagem">
-                <button>oi</button>
+                <button id="btnMatheus">oi</button>
             </div>
             <div class="texto">
                 <p><Strong>Heroi Favorito: </Strong>Batman</p>
