--- a/paginas html/sobrenos.html
+++ b/paginas html/sobrenos.html
@@ -32,13 +32,13 @@
         </section>
         <Section id="Eduarda">
             <div class="imagem">
-                <button>oi</button>
+                <button id="btnEduarda"></button>
             </div>
             <div class="texto">
                 <p><Strong>Heroi Favorito:</Strong>Super-Girl</p>
                 <p><Strong>Vilão Favorito:</Strong>Hera venenosa</p>
                 <p><Strong>Anti-Heroi Favorito:</Strong>Arlequina</p>
-                <p><Strong>O que achou do projeto:</Strong><Em>"Massa Demais Doido"</Em></p>
+                <p><Strong>O que achou do projeto:</Strong><Em>"Gostei do projeto"</Em></p>
             </div>
         </Section>
         <section id="Matheus">
